[project]
name = "pyssertive"
dynamic = ["version"]
description = "Fluent, chainable assertions for Python tests — HTTP, architecture, and database. Inspired by Laravel's elegant testing API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Unay Santisteban", email = "usantisteban@othercode.io" }
]
keywords = ["django", "testing", "assertions", "fluent", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "grimp>=3.14",
    "jsonschema>=4.26.0",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
django = ["Django>=4.2"]
httpx = ["httpx>=0.28.1"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    # Optional adapters are imported by mkdocstrings to render the API reference
    # for the Django/httpx integration modules.
    "Django>=4.2",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/othercodes/pyssertive"
Repository = "https://github.com/othercodes/pyssertive.git"
Issues = "https://github.com/othercodes/pyssertive/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyssertive/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyssertive"]

[dependency-groups]
test-core = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "types-jsonschema>=4.26.0.20260508",
]
test-django = [
    {include-group = "test-core"},
    "pytest-django>=4.12.0",
    "django-stubs>=6.0.4",
]
test-httpx = [
    {include-group = "test-core"},
    "httpx>=0.28.1",
]
dev = [
    {include-group = "test-django"},
    {include-group = "test-httpx"},
    "ruff>=0.15.12",
    "mypy>=2.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "src/pyssertive/_version.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.app.settings"
pythonpath = [".", "src"]
addopts = "--cov=pyssertive --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["src/pyssertive"]
omit = ["src/pyssertive/_version.py"]

[tool.coverage.paths]
# Maps coverage data from different runners (different absolute paths) to a single canonical location
# so `coverage combine` can merge data files produced by parallel CI jobs.
source = [
    "src/",
    "*/pyssertive/src/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.mypy]
python_version = "3.10"
exclude = ["src/pyssertive/_version\\.py$", "tests/arch/fixtures/"]
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "tests.app.settings"
